# interactive-bezier

./: .gitignore  LICENSE  README.md  app.py  benchmarks.py  config.py  pyproject.toml  requirements.txt  run.py  settings.toml
interactive_bezier/: app.py  bezier.py  interactive_bezier.py  models.py
